--- a/V16/lit.bib
+++ b/V16/lit.bib
@@ -12,3 +12,36 @@
   url = {https://web-docs.gsi.de/~wolle/Schuelerlabor/TALKS/DETEKTOREN/VO-4-Halbleiterdetektoren.pdf},
   urldate = {2018-11-18}
 }
+
+@online{Ealpha,
+  author = {},
+  title = {Energie Alpha Teilchen},
+  url = {https://www.phywe.de/de/alpha-und-photodetektor.html},
+  urldate = {2018-11-21}
+}
+
+@online{malpha,
+  author = {},
+  title = {Masse Alpha Teilchen},
+  url = {https://www.spektrum.de/lexikon/physik/alphastrahlung/393},
+  urldate = {2018-11-21}
+}
+
+@online{rhoau,
+  author = {},
+  title = {periodensystem Au},
+  url = {http://www.periodensystem.info/elemente/gold/},
+  urldate = {2018-11-21}
+}
+@online{Zhe,
+  author = {},
+  title = {periodensystem He},
+  url = {http://www.periodensystem.info/elemente/helium/},
+  urldate = {2018-11-21}
+}
+@online{Ienergiegold,
+  author = {},
+  title = {Ionisationsenergie},
+  url = {http://www.uniterra.de/rutherford/tab_iong.htm},
+  urldate = {2018-11-20}
+}
