--- a/V53/auswertung.tex
+++ b/V53/auswertung.tex
@@ -3,16 +3,94 @@
 \section{Auswertung}
 \begin{table}
   \centering
-  \caption{}
   \begin{tabular}{c c c c c}
     \toprule
-    {$\su{U_1}$} & {$\su{U_2}$} & {$\su{U_3}$} & {A} & {$\su{f_0}$} \\
+    {$\su{U_1}$\,/\,V} & {$\su{U_2}$\,/\,V} & {$\su{U_3}$\,/\,V} & {$\su{A_0}$\,/\,Teilstriche} & {$\su{f_0}$\,/\,MHz} \\
     \midrule
+
     \bottomrule
     \label{fig:}
   \end{tabular}
+  \caption{}
 \end{table}
 
+\begin{table}
+    \centering
+    \begin{tabular}{c c}
+        \toprule
+        {$\su{U_0}$\,/\,V} & {$\su{f_0}$\,/\,MHz} \\
+        \midrule
+
+        \bottomrule
+        \label{fig:}
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{c c c}
+        \toprule
+        {$\su{U_0}$\,/\,V} & {1. Minimum\,/\,mm} & {2. Minimum\,/\,mm} \\
+        \midrule
+
+        \bottomrule
+        \label{fig:}
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{c c c}
+        \toprule
+        {SWR-Meter Ausschlag\,/\,dB} & {Mikrometereinstellung\,/\,mm} & {Dämpfung aus der Eichkurve\,/\,mm} \\
+        \midrule
+
+        \bottomrule
+        \label{fig:}
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{c c c}
+        \toprule
+        {Sondentiefe\,/\,V} & {SWR-Meter Ausschlag} \\
+        \midrule
+
+        \bottomrule
+        \label{fig:}
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{c c c}
+        \toprule
+        {$\su{U_0}$\,/\,V} & {1. Minimum\,/\,mm} & {2. Minimum\,/\,mm} \\
+        \midrule
+
+        \bottomrule
+        \label{fig:}
+    \end{tabular}
+    \caption{}
+\end{table}
+
+\begin{table}
+    \centering
+    \begin{tabular}{c c c c}
+        \toprule
+        {$\su{d_1}$\,/\,mm} & {$\su{d_2}$\,/\,mm} & {1. Minimum\,/\,mm} & {2. Minimum\,/\,mm} \\
+        \midrule
+
+        \bottomrule
+        \label{fig:}
+    \end{tabular}
+    \caption{}
+\end{table}
 
 
 
