--- a/V16/theorie.tex
+++ b/V16/theorie.tex
@@ -1,4 +1,3 @@
-
 \section{Zielsetzung}
 Ziel dieses Versuchs ist es die Streuung von $\su{\alpha}$-Teilchen an einer Goldfolie zu bestimmen.
 Dafür wird der differentielle Wirkungsquerschnitt der Streuung und die Abhängigkeit der Kernladungszahl Z
@@ -7,11 +6,11 @@ Aus der Streuung kann zusätzlich durch die Energieverlustmessung der $\su{\alph
 auch die Foliendicke bestimmt werden.
 \section{Theorie}
 Beim Durchlauf von positiv geladenen $\su{\alpha}$-Teilchen durch Materie kann es zu
-zwei unterschiedlichen Wechselwirkungen kommen. Die erste Wechselwirkung findet mit negativ geladenen Hüllenelektron
+zwei unterschiedlichen Wechselwirkungen kommen. Die erste Wechselwirkung findet mit negativ geladenen Hüllenelektronen
 statt und die zweite mit dem positiven Atomkern.
 \newline
 Bei der Wechselwirkung zwischen $\su{\alpha}$-Teilchen und dem Hüllenelektronen kommt es durch
-Anregungs- und Ionisationsprozesse zur Energieabgabe.
+Anregungs- und Ionisationsprozessen zur Energieabgabe des $\su{\alpha}$-Teilchens an das Hüllenelektron.
 Es wird angenommen, dass es aufgrund der größeren Masse der $\su{\alpha}$-Teilchen gegenüber
 der Elektronenmasse zu keiner Ablenkung der $\su{\alpha}$-Teilchen kommt.
 \newline
@@ -21,7 +20,7 @@ Die Bethe-Bloch-Gleichung beschreibt den Energieverlust
 \label{eqn:bethebloch}
 \end{equation}
 der $\su{\alpha}$-Teilchen beim Durchgang durch die Materie.
-Hierbei gibt N die Atomdichte, $\su{m_0}$ die Ruheenergie des Hüllenelektrons, Z die Kernladungszahl und I die mittlere Ionisationsenergie
+Hierbei gibt N die Atomdichte, $\su{m_0}$ die Ruhemasse des Hüllenelektrons, Z die Kernladungszahl und I die mittlere Ionisationsenergie
 des Targetmaterials an.
 
 Bei der Streuung der $\su{\alpha}$-Teilchen am Atomkern kommt es durch die Coulombkraft zu
@@ -43,20 +42,20 @@ Der Versuchsaufbau ist in Abbildung \ref{fig:aufbau} dargestellt.
 \begin{figure}
   \centering
   \includegraphics[width = 12 cm]{pictures/aufbau.png}
-  \caption{Darstellung des Versuchsaufbaus}
+  \caption{Darstellung des Versuchsaufbaus mit Abmessungen in mm.}
   \label{fig:aufbau}
 \end{figure}
 \newline
 Der Versuch findet im Vakuum statt, da die $\su{\alpha}$-Strahlung in Luft nur eine sehr geringe
-Reichweite hat. Als $\su{\alpha}$-Strahler dient ein $\ce{^{241}}\su{Am}$-Präparat.
-Die aus der Quelle austretenen Teilchen werden mithilfe von zwei 2\,mm Schlitzblenden kollimiert,
+Reichweite hat. Als $\su{\alpha}$-Strahler dient ein $\ce{^{241}}\su{Am}$-Präparat, welches in $\ce{^{237}}\su{Np}$ zerfällt.
+Die aus der Quelle austretenen Teilchen mit einer Energie von $E_{\alpha}=5,486$\,MeV werden mithilfe von zwei 2\,mm Schlitzblenden kollimiert,
 damit diese senktrecht auf die Goldfolie treffen.
 An dieser Folie werden die Teilchen um den Winkel $\su{\Uptheta}$ gestreut und von einem Detektor
 aufgenommen. Bei diesem Detektor handelt es sich um einen Surface-Barrier-Detektor, also einen
 Halbleiter Detektor, an dem die einfallenden $\su{\alpha}$-Teilchen in der Sperrschicht Elektronen-Loch-Paare
 erzeugen und durch ihre Energieabgabe die Exzitonen in ein höheres Energieniveau anheben, wo diese frei beweglich sind.
-Durch ein anliegendes elektrisches Feld werden diese zur jeweiligen Elektorde beschleunigt.
-Die führt zu einem messbaren Stromimpuls an den Elektroden. Um die vom Detektor erfassten Impulse besser verarbeiten
+Durch ein anliegendes elektrisches Feld werden diese zur jeweiligen Elektrode beschleunigt.
+Dies führt zu einem messbaren Stromimpuls an den Elektroden. Um die vom Detektor erfassten Impulse besser verarbeiten
 zu können, wird ein Verstärker verwendet.
 Als Messgeräte dienen dann ein Oszilloskop zur Bestimmung des Energieverlusts und ein Zählwerk zur
 Bestimmung des Streuquerschnitts.
