Korrektur ist fertig

--- a/V53/proto.tex
+++ b/V53/proto.tex
@@ -3,7 +3,8 @@
 \begin{titlepage}
   \begin{flushleft}
  Durchführung: 05.12.2018\\
- Abgabe: 12.12.2018\\
+ Abgabe: 13.12.2018\\
+ 1.Korrektur: 19.12.18\\
   \end{flushleft}
 
 
